# Akari_simulator

./: README.md  package.xml  setup.cfg  setup.py
akari_simulator/: sim_greeting.py  sim_m5_server.py  sim_servo_client.py  sim_servo_server.py  state_publisher.py
launch/: rviz_sim.launch.py  rvizdisplay.launch.py
urdf/: akari.urdf
