<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>akari_simulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mantues@yahoo.co.jp">akariros</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>ament_cmake_python</depend>

  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>std_msgs</depend>
  <test_depend>std_msgs</test_depend>
  
  <depend>action_msgs</depend>
  
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <test_depend>rclpy</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
